# cv-recruter

./: .gitignore  pyproject.toml  teste.py
.streamlit/: config.toml
analyser/: app.py  cron_sheet.py
analyser/database/: tiny_db.py
analyser/factories/: analysis_factory.py  file_factory.py  job_factory.py  resume_factory.py
analyser/models/: analysis.py  job.py  resum.py
analyser/ollama/: interfaces.py  models.py  repositories.py  services.py
analyser/routes/: analyse.py  curriculum.py  job.py
analyser/service/: file_service.py  llama_client.py  sheets.py
